--- a/css/main.css
+++ b/css/main.css
@@ -809,6 +809,12 @@ input {
 
 .work {
   padding-top: 0;
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .work {
+    display: block;
+  }
 }
 
 .work__title {
