--- a/sass/components/_work.scss
+++ b/sass/components/_work.scss
@@ -1,6 +1,12 @@
 .work {
   padding-top: 0;
+  display: none;
+
+  @media screen and (min-width: 1200px) {
+    display: block;
+  }
 }
+
 .work__title {
   font-weight: 700;
   font-size: 36px;
