--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,34 +1,42 @@
-.clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 .clients__title {
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 36px;
+    margin-bottom: 50px;
+  }
 }
 
 .clients__list {
   display: flex;
-  align-self: center;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 30px;
 }
 
 .clients__link {
   border: 1px solid $icon-color;
   display: flex;
-  width: 170px;
+  width: 210px;
   height: 92px;
   justify-content: center;
   align-items: center;
   color: $icon-color;
   border-radius: 4px;
   transition: color $time $cubic;
-  border-color: $time $cubic;
+
+  @media screen and (min-width: 768px) {
+    width: 226px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 170px;
+  }
 
   &:hover,
   &:focus {
