--- a/sass/components/_properties.scss
+++ b/sass/components/_properties.scss
@@ -4,7 +4,16 @@
   gap: 30px;
 }
 .properties__item {
-  width: 270px;
+  width: 450px;
+  outline: 2px solid tomato;
+
+  @media screen and (min-width: 768px) {
+    width: 354px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+  }
 }
 
 .properties__title {
@@ -13,6 +22,10 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 10px;
+
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
 }
 
 .properties__text {
@@ -25,7 +38,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 270px;
   height: 120px;
   background-color: $secondary-primery-color;
   border-radius: 4px;
