Added JS mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,3 +16,4 @@
 @import "./components/properties";
 @import "./components/team";
 @import "./components/work";
+@import "./components/mobile-menu-template";
