--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -11,14 +11,18 @@ header {
 .header__list {
   display: flex;
   gap: 30px;
-  padding-top: 32px;
-  padding-bottom: 32px;
   margin-left: 93px;
+
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 }
 
 .header__nav {
   display: flex;
   align-items: center;
+  padding-top: 24px;
+  padding-bottom: 25px;
 }
 
 .header__logopart {
@@ -53,6 +57,11 @@ header {
   display: flex;
   align-items: center;
   transition: color $time $cubic;
+
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+
   &:hover,
   &:focus {
     color: $accent-color;
