--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -288,8 +288,16 @@ footer {
 }
 
 .footer-container {
-  display: flex;
   align-items: baseline;
+}
+@media screen and (min-width: 768px) {
+  .footer-container {
+    display: flex;
+  }
+}
+
+.footer-contacts {
+  outline: 1px solid tomato;
 }
 
 .logo .footer-container {
@@ -339,6 +347,7 @@ address {
 
 .footer-sign {
   margin-left: auto;
+  outline: 1px solid tomato;
 }
 
 .footer-sign-title {
@@ -352,9 +361,13 @@ address {
 }
 
 .footer-sign-form {
-  display: flex;
   align-items: center;
   justify-content: center;
+}
+@media screen and (min-width: 1200px) {
+  .footer-sign-form {
+    display: flex;
+  }
 }
 
 .footer-sign-input {
@@ -413,6 +426,7 @@ address {
 
 .add {
   margin-left: 70px;
+  outline: 1px solid tomato;
 }
 
 .add-title {
