--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -288,123 +288,123 @@ footer {
 }
 
 .footer-container {
+  display: block;
+  flex-wrap: wrap;
   align-items: baseline;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .footer-container {
     display: flex;
   }
 }
 
-.footer-contacts {
-  outline: 1px solid tomato;
+@media screen and (max-width: 1199px) {
+  .footer-contacts {
+    margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-contacts {
+    margin-left: 76px;
+  }
 }
 
-.logo .footer-container {
+.footer-logo {
+  display: block;
+  margin-top: 0;
   margin-bottom: 20px;
+  margin-right: 0;
+  padding: 0;
+  font-weight: 700;
+  font-size: 26px;
+  letter-spacing: 0.03em;
+  color: #2196f3;
+  font-family: Raleway;
+  line-height: 1.2;
+  text-decoration: none;
+}
+@media screen and (max-width: 1199px) {
+  .footer-logo {
+    text-align: center;
+    font-size: 24px;
+  }
 }
 
 .footer-logopart {
   color: #ffffff;
 }
 
-address {
-  margin-top: 20px;
-}
-
-.address-list {
-  display: flex;
-  flex-direction: column;
-  gap: 9px;
-  font-size: 14px;
-  line-height: 1.71;
+.address-item {
+  line-height: 1.7;
   letter-spacing: 0.03em;
-  font-style: normal;
 }
-
-.contacts {
-  text-decoration: none;
-  color: rgba(211, 201, 201, 0.468);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.address-item:not(:last-child) {
+  margin-bottom: 9px;
 }
-.contacts:hover, .contacts:focus {
-  color: #ffffff;
-}
-
-.city {
-  color: #ffffff;
-}
-
-.sign-button-form {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.submit-logo {
-  margin-left: 10px;
-}
-
-.footer-sign {
-  margin-left: auto;
-  outline: 1px solid tomato;
-}
-
-.footer-sign-title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #ffffff;
-  margin-bottom: 20px;
-}
-
-.footer-sign-form {
-  align-items: center;
-  justify-content: center;
-}
-@media screen and (min-width: 1200px) {
-  .footer-sign-form {
-    display: flex;
+@media screen and (max-width: 1199px) {
+  .address-item {
+    text-align: center;
+  }
+  .address-item:not(:last-child) {
+    margin-bottom: 8px;
   }
 }
 
-.footer-sign-input {
-  width: 358px;
-  height: 50px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  background-color: inherit;
-  padding-left: 16px;
-  display: inline-block;
+.address-link {
+  color: rgba(255, 255, 255, 0.6);
+  font-style: normal;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  text-decoration: none;
+}
+.address-link:hover, .address-link:focus {
+  color: #2196f3;
+}
+.address-link .address-city {
   color: #ffffff;
-  outline: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-sign-btn {
-  padding: 10px 28px;
+.add {
+  margin-left: 0;
+  margin-bottom: 60px;
+}
+@media screen and (min-width: 768px) {
+  .add {
+    margin-left: 165px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .add {
+    margin-left: 70px;
+  }
+}
+
+.add-title {
+  margin-bottom: 20px;
   font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
+  line-height: 1.1;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
   color: #ffffff;
-  background-color: #2196f3;
-  border-radius: 4px;
-  border: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 11px;
+  font-size: 14px;
+}
+@media only screen and (max-width: 1199px) {
+  .add-title {
+    text-align: center;
+  }
 }
 
-.footer-sign-icon {
-  margin-left: 10px;
+.add-list {
+  display: flex;
+  justify-content: center;
+}
+
+.add-item:not(:last-child) {
+  margin-right: 10px;
 }
 
 .add-link {
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   width: 44px;
@@ -424,24 +424,107 @@ address {
   fill: currentColor;
 }
 
-.add {
-  margin-left: 70px;
-  outline: 1px solid tomato;
+.footer-sign {
+  margin-left: 0;
+  width: 100%;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .footer-sign {
+    margin-left: 93px;
+  }
 }
 
-.add-title {
-  margin-bottom: 20px;
+.footer-sign-title {
   font-weight: 700;
-  line-height: 1.1;
+  font-size: 14px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
-  font-size: 14px;
+  margin-bottom: 20px;
+}
+@media screen and (max-width: 1199px) {
+  .footer-sign-title {
+    text-align: center;
+  }
 }
 
-.add-list {
+.footer-sign-form {
   display: flex;
-  gap: 10px;
   align-items: center;
   justify-content: center;
+}
+@media screen and (max-width: 1199px) {
+  .footer-sign-form {
+    display: block;
+  }
+}
+
+.footer-sign-input {
+  display: inline-block;
+  width: 358px;
+  padding: 15px 16px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  outline: none;
+  font-size: 16px;
+  line-height: 1.3px;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  background-color: #2f303a;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-sign-input:focus {
+  border: 1px solid #2196f3;
+  border-radius: 4px;
+  color: #ffffff;
+}
+@media screen and (max-width: 767px) {
+  .footer-sign-input {
+    display: block;
+    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 20px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-sign-input {
+    margin: 0 auto;
+    margin-bottom: 20px;
+    display: block;
+    width: 450px;
+  }
+}
+
+.btn-wrap {
+  display: flex;
+  margin: 0;
+  justify-content: center;
+}
+@media screen and (min-width: 1200px) {
+  .btn-wrap {
+    margin-left: 11px;
+  }
+}
+
+.footer-sign-btn {
+  padding: 10px 28px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  background-color: #2196f3;
+  border-radius: 4px;
+  border: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-sign-icon {
+  margin-left: 10px;
 }/*# sourceMappingURL=portfolio.css.map */
