Added mobile-menu-contacts class

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,3 +17,4 @@
 @import "./components/team";
 @import "./components/work";
 @import "./components/mobile-menu-template";
+@import "./components/mobile-menu-contacts";
