--- a/css/main.css
+++ b/css/main.css
@@ -157,12 +157,19 @@ footer {
 
 .footer-container {
   display: block;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   align-items: baseline;
+}
+@media screen and (min-width: 768px) {
+  .footer-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 @media screen and (min-width: 1200px) {
   .footer-container {
     display: flex;
+    flex-wrap: nowrap;
   }
 }
 
@@ -227,7 +234,7 @@ footer {
 .address-link:hover, .address-link:focus {
   color: #2196f3;
 }
-.address-link .address-city {
+.address-link .address-link.address-city {
   color: #ffffff;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -505,9 +512,8 @@ header {
 .hero {
   background-color: #2f303a;
   text-align: center;
-  max-width: 480px;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   margin-left: auto;
   margin-right: auto;
   background-size: cover;
@@ -532,6 +538,8 @@ header {
 }
 @media screen and (min-width: 769px) {
   .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/background/bg-img_lg@1x.jpeg");
   }
 }
