--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -289,12 +289,19 @@ footer {
 
 .footer-container {
   display: block;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   align-items: baseline;
+}
+@media screen and (min-width: 768px) {
+  .footer-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 @media screen and (min-width: 1200px) {
   .footer-container {
     display: flex;
+    flex-wrap: nowrap;
   }
 }
 
@@ -359,7 +366,7 @@ footer {
 .address-link:hover, .address-link:focus {
   color: #2196f3;
 }
-.address-link .address-city {
+.address-link .address-link.address-city {
   color: #ffffff;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
