--- a/css/main.css
+++ b/css/main.css
@@ -175,7 +175,7 @@ footer {
 
 @media screen and (max-width: 1199px) {
   .footer-contacts {
-    margin-bottom: 60px;
+    margin-bottom: 54px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -250,7 +250,7 @@ footer {
 }
 @media screen and (min-width: 1200px) {
   .add {
-    margin-left: 70px;
+    margin-left: 59px;
   }
 }
 
@@ -300,13 +300,14 @@ footer {
 }
 
 .footer-sign {
-  margin-left: 0;
   width: 100%;
+  margin-left: 0;
   text-align: center;
 }
 @media screen and (min-width: 1200px) {
   .footer-sign {
     margin-left: 93px;
+    width: auto;
   }
 }
 
