--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -307,7 +307,7 @@ footer {
 
 @media screen and (max-width: 1199px) {
   .footer-contacts {
-    margin-bottom: 60px;
+    margin-bottom: 54px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -382,7 +382,7 @@ footer {
 }
 @media screen and (min-width: 1200px) {
   .add {
-    margin-left: 70px;
+    margin-left: 59px;
   }
 }
 
@@ -432,13 +432,14 @@ footer {
 }
 
 .footer-sign {
-  margin-left: 0;
   width: 100%;
+  margin-left: 0;
   text-align: center;
 }
 @media screen and (min-width: 1200px) {
   .footer-sign {
     margin-left: 93px;
+    width: auto;
   }
 }
 
