--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -22,7 +22,7 @@ footer {
 
 .footer-contacts {
   @media screen and (max-width: 1199px) {
-    margin-bottom: 60px;
+    margin-bottom: 54px;
   }
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     margin-left: 76px;
@@ -93,7 +93,7 @@ footer {
   }
 
   @media screen and (min-width: 1200px) {
-    margin-left: 70px;
+    margin-left: 59px;
   }
 }
 
@@ -144,12 +144,13 @@ footer {
 }
 
 .footer-sign {
-  margin-left: 0;
   width: 100%;
+  margin-left: 0;
   text-align: center;
 
   @media screen and (min-width: 1200px) {
     margin-left: 93px;
+    width: auto;
   }
 }
 
