--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -21,8 +21,18 @@ header {
 .header__nav {
   display: flex;
   align-items: center;
-  padding-top: 24px;
-  padding-bottom: 25px;
+  padding-top: 20px;
+  padding-bottom: 21px;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
 }
 
 .header__logopart {
@@ -83,8 +93,12 @@ header {
     background-color: $accent-color;
     position: absolute;
     display: block;
-    bottom: -33px;
+    bottom: -29px;
     left: 0;
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      bottom: -31px;
+    }
   }
 }
 
@@ -102,4 +116,9 @@ header {
   gap: 50px;
   margin-right: 0;
   align-items: baseline;
+
+  @media only screen and (min-width: 768px) and (max-width: 1199px) {
+    flex-direction: column;
+    gap: 10px;
+  }
 }
