--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -67,7 +67,14 @@ footer {
   }
 }
 
+.address-link.address-city {
+  color: $primery-white-color;
+}
+
 .address-link {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
   transition: color $time $cubic;
@@ -76,11 +83,6 @@ footer {
   &:hover,
   &:focus {
     color: $accent-color;
-  }
-
-  .address-link.address-city {
-    color: $primery-white-color;
-    transition: color $time $cubic;
   }
 }
 
@@ -155,6 +157,7 @@ footer {
 }
 
 .footer-sign-title {
+  text-align: left;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.17;
