--- a/sass/components/_mobile-menu-contacts.scss
+++ b/sass/components/_mobile-menu-contacts.scss
@@ -48,7 +48,10 @@
 }
 
 .link-current {
+  font-weight: 500;
   font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
   color: $accent-color;
 }
 
