--- a/css/main.css
+++ b/css/main.css
@@ -225,7 +225,14 @@ footer {
   }
 }
 
+.address-link.address-city {
+  color: #ffffff;
+}
+
 .address-link {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -233,10 +240,6 @@ footer {
 }
 .address-link:hover, .address-link:focus {
   color: #2196f3;
-}
-.address-link .address-link.address-city {
-  color: #ffffff;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .add {
@@ -312,6 +315,7 @@ footer {
 }
 
 .footer-sign-title {
+  text-align: left;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.17;
@@ -510,6 +514,11 @@ header {
     bottom: -31px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .current::after {
+    bottom: -32px;
+  }
+}
 
 .logo {
   text-decoration: none;
@@ -596,7 +605,7 @@ header {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-  padding: 18px 24px;
+  padding: 10px 24px;
 }
 @media screen and (min-width: 768px) {
   .hero__button {
@@ -622,8 +631,9 @@ header {
   position: absolute;
   top: 50%;
   left: 50%;
+  width: 100%;
   transform: translate(-50%, -50%);
-  width: 450px;
+  max-width: 450px;
   min-height: 609px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -633,7 +643,7 @@ header {
 }
 @media screen and (min-width: 1200px) {
   .modal {
-    width: 528px;
+    min-width: 528px;
     min-height: 581px;
   }
 }
@@ -778,12 +788,22 @@ input {
 }
 
 .check {
-  font-size: 14px;
+  font-size: 7px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
   display: flex;
   align-items: center;
+}
+@media screen and (min-width: 450px) {
+  .check {
+    font-size: 12px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .check {
+    font-size: 14px;
+  }
 }
 .check::before {
   content: "";
@@ -1105,13 +1125,6 @@ input {
   padding-top: 27px;
 }
 
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  line-height: 1.5;
-  color: #212121;
-  background-color: #fff;
-}
-
 .container {
   min-width: 320px;
   max-width: 1200px;
@@ -1266,7 +1279,10 @@ body {
 }
 
 .link-current {
+  font-weight: 500;
   font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
   color: #2196f3;
 }
 
