--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -85,6 +85,7 @@ header {
 
 .current {
   color: $accent-color;
+
   &::after {
     content: "";
     width: 100%;
@@ -98,6 +99,10 @@ header {
 
     @media screen and (min-width: 768px) and (max-width: 1199px) {
       bottom: -31px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      bottom: -32px;
     }
   }
 }
