--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -11,8 +11,9 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  width: 100%;
   transform: translate(-50%, -50%);
-  width: 450px;
+  max-width: 450px;
   min-height: 609px;
   background-color: $primery-white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -22,7 +23,7 @@
   padding: 40px;
 
   @media screen and (min-width: 1200px) {
-    width: 528px;
+    min-width: 528px;
     min-height: 581px;
   }
 
