--- a/css/main.css
+++ b/css/main.css
@@ -1108,6 +1108,11 @@ input {
 .work__item {
   position: relative;
 }
+@media screen and (min-width: 1200px) {
+  .work__item {
+    width: 370px;
+  }
+}
 
 .work__toptext {
   width: 100%;
