--- a/sass/components/_work.scss
+++ b/sass/components/_work.scss
@@ -24,6 +24,10 @@
 
 .work__item {
   position: relative;
+
+  @media screen and (min-width: 1200px) {
+    width: 370px;
+  }
 }
 
 .work__toptext {
